--- a/app/views/resources/css/style.css
+++ b/app/views/resources/css/style.css
@@ -2,3 +2,28 @@ html, body{
     width: 100%;
     height: 100%;
 }
+
+/* piede de pagina */
+.footer {
+    text-align: center;
+    height: 5%;
+    padding: 10px;
+    margin-top: 15px;
+    background-color: #333; /* Color de fondo oscuro */
+    color: white; /* Color del texto */
+    border-top: 1px solid #ccc; /* Línea superior */
+}
+
+.footer-text {
+    margin: 0;
+    font-size: 14px; /* Tamaño de la fuente */
+}
+
+.footer-links a {
+    color: white; /* Color de los enlaces */
+    text-decoration: none; /* Sin subrayado */
+}
+
+.footer-links a:hover {
+    text-decoration: underline; /* Subrayado al pasar el mouse */
+}
