--- a/app/views/resources/css/style.css
+++ b/app/views/resources/css/style.css
@@ -1,29 +1,31 @@
-html, body{
-    width: 100%;
+body, html{
     height: 100%;
+    width: 100%;
+}
+/* estilos login */
+main{
+    height: 95%;
+}
+.main-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.main-container > .login, 
+.main-container > .hero-body{
+    height: auto;
+    width: 100%;
+    max-width: 400px;
+    min-width: 300px;
+} 
 /* piede de pagina */
-.footer {
-    text-align: center;
+footer {
     height: 5%;
-    padding: 10px;
-    margin-top: 15px;
-    background-color: #333; /* Color de fondo oscuro */
-    color: white; /* Color del texto */
-    border-top: 1px solid #ccc; /* Línea superior */
-}
-
-.footer-text {
-    margin: 0;
-    font-size: 14px; /* Tamaño de la fuente */
-}
-
-.footer-links a {
-    color: white; /* Color de los enlaces */
-    text-decoration: none; /* Sin subrayado */
-}
-
-.footer-links a:hover {
-    text-decoration: underline; /* Subrayado al pasar el mouse */
+    padding: 5px 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
